--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,15 @@
 
       <div class="col-md-10 col-md-offset-1">
         <h1>Let's Chat!</h1>
+        <form id="message-form">
+          <label>Name</label>
+          <input type="text" class="form-control" name="name" />
+          <label>Message</label>
+          <textarea class="form-control" name="message"></textarea>
+          <button type="submit" class="btn btn-primary form-control">Post Message</button>
+          <br /><br />
+        </form>
+        <div id="messages"></div>
       </div>
 
       <script src="/socket.io/socket.io.js"></script>
